2005-03-29  Don Allingham  <don@gramps-project.org>
	* src/ReadXML.py: handle date object on names
	* src/gramps.glade: add menu items for merging
	* src/MergePeople.py: new person merge 
	* src/gramps_main.py: merge handling callbacks
	* src/mergedata.glade: updated interface for merging

2005-03-29  Alex Roitman  <shura@gramps-project.org>
	* src/Witness.py (WitnessEditor.__init__): Work around missing
	reference.
	* src/gramps_main.py (delete_person_response): Object/handle mixups,
	remove unneeded commits.

	* src/gramps_main.py (undo_callback,redo_callback): Minor
	improvements, (read_file): Always re-initialize Undo and Redo items
	to insensitive blanks after new database load; (post_load): Set up
	database's callbacks for Undo and Redo after load.
	* src/gramps.glade: Make Redo label non-stock to allow label change.

2005-03-29  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py (on_object_select_row): fixed the drop of 
	text into TextView widgets.
	
2005-03-29  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/DdTargets.py: add family targets to target list functions
	* src/Marriage.py (at_dest_drag_data_received, ev_dest_drag_data_received, 
	ev_source_drag_data_get, at_source_drag_data_get): fixed dnd methods and 
	added use of DdTarget types.
	* src/plugins/ScratchPad.py (generate_family_event_tooltip, 
	generate_family_event_tooltip, redraw_object_list): added support for 
	family events and attributes.

2005-03-27  Don Allingham  <don@gramps-project.org>
	* src/SourceView.py: connect SourceView.merge into the multiple
	selection mechanism

2005-03-27  Alex Roitman  <shura@gramps-project.org>
	* src/MergeData.py: Fixes for places and sources.
	* src/PlaceView.py (build_context_menu): Typo.
	* src/SourceView.py (__init__,build_tree): Allow multiple,
	selections; (merge): Add placeholder method (borrowed from places,
	needs work.
	* src/gramps_main.py (on_views_switch_page): Enable merge button;