@@ -1,3 +1,7 @@
+2005-03-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* plugins/TestcaseGenerator.py: Added some more testcases of invalid relations
+	* plugins/Check.py: Added some comments an handling for some more invalid references
+
 2005-03-29  Don Allingham  <don@gramps-project.org>
 	* src/ReadXML.py: handle date object on names
 	* src/gramps.glade: add menu items for merging
